# aura

./: .gitignore  .vercelignore  CHANGELOG.md  README.md  README.ru.md  install_whisper.py  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md
docs/: parakeet-integration-plan.md  signed-auto-updater-plan.md  silero-vad-plan.md
docs/superpowers/plans/: 2026-06-30-glaido-clone-plan.md
docs/superpowers/specs/: 2026-06-30-glaido-clone-design.md
src/: index.html  main.js  overlay.html  overlay.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  audio_recorder.rs  history.rs  keyboard_hook.rs  keyboard_simulator.rs  lib.rs  main.rs  settings.rs  vad.rs  whisper_runner.rs
website/: index.html  index_ru.html  main.js  style.css
