[package]
name = "aura-app"
version = "1.0.0"
description = "Aura — voice dictation for Windows: hold a hotkey, speak, get clean text in any app (Whisper local/cloud + LLM cleanup)"
authors = ["Aura contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/malashkadev/aura"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aura_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_Storage_FileSystem"] }
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.11", features = ["json", "multipart", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
arboard = "3.4.0"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
winreg = "0.52"


